<resources>
    <string name="app_name">Study Up</string>
    <string name="set_button">SET</string>
    <string name="current_subject_label">CORSO</string>
    <string name="timer_value">60</string>
    <string name="pomodoro_value">25</string>
    <string name="seconds_value">00</string>
    <string name="image_desc">Triangular button image</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_results">Results</string>
    <string name="menu_trophies">Trophies</string>

    <string name="subject_label">Corso</string>
    <string name="location_label">Luogo</string>
    <string name="study_type_label">Tipo</string>
    <string name="theory">Teoria</string>
    <string name="exercises">Esercizi</string>
    <string name="project">Progetto</string>
    <string name="plus_symbol">+</string>
    <string name="ok">OK</string>

    <string name="add_subject">Nuovo\ncorso</string>
    <string name="ex_subject">Es: Fisica</string>
    <string name="add_subject_label">Aggiungere materia?</string>
    <string name="add_location">Nuovo\nluogo</string>
    <string name="ex_location">Es: Casa</string>
    <string name="add_location_label">Aggiungere luogo?</string>
    <string name="add_label">Aggiungi</string>
    <string name="abort_label">Annulla</string>

    <string name="login_textview_label">es:Student94</string>
    <string name="login_textview_title">Benvenuto! Inserisci un username!</string>
    <string name="password_textview_label">Password</string>
    <string name="login_access_label">Accedi</string>
    <string name="login_registration_label">Registrati</string>

    <string name="no_location_label">Non ci sono ancora luoghi salvati!</string>
    <string name="close_button_content">Bottone per chiudere mappa</string>
    <string name="map_button_content">Bottone per aprire mappa</string>

    <!-- Stringhe titolo trofei -->
    <string name="trophy_title_01">Fuori il primo! E gli altri?</string>
    <string name="trophy_title_02">Splash!</string>
    <string name="trophy_title_03">Pentasplash!</string>
    <string name="trophy_title_04">E\' intelligente ma non si applica</string>
    <string name="trophy_title_05">E\' intelligente e si applica</string>
    <string name="trophy_title_06">Secchione</string>
    <string name="trophy_title_07">Due piccioni con una fava</string>
    <string name="trophy_title_08">Multitasking</string>
    <string name="trophy_title_09">Stakanovista</string>
    <string name="trophy_title_10">Più sono grossi…</string>
    <string name="trophy_title_11">…più si fanno male cadendo!</string>
    <string name="trophy_title_12">Smanettone</string>
    <string name="trophy_title_13">E\' finita la pacchia!</string>
    <string name="trophy_title_14">Guardone</string>
    <string name="trophy_title_15">Mesiversario</string>
    <string name="trophy_title_16">42</string>
    <string name="trophy_title_17">Giramondo</string>
    <string name="trophy_title_18">Caffè?</string>
    <string name="trophy_title_19">Caffeinomane</string>
    <string name="trophy_title_20">Mr Pomodoro</string>

    <!-- Stringhe descrizione trofei -->
    <string name="trophy_description_01">Apri per la prima volta l\'app.</string>
    <string name="trophy_description_02">Completa un pomodoro.</string>
    <string name="trophy_description_03">Completa 5 pomodori di fila.</string>
    <string name="trophy_description_04">Completa 10 ore di studio totale.</string>
    <string name="trophy_description_05">Completa 25 ore di studio totale.</string>
    <string name="trophy_description_06">Completa 50 ore di studio totale.</string>
    <string name="trophy_description_07">Studia nello stesso giorno due materie diverse.</string>
    <string name="trophy_description_08">Studia nello stesso giorno tre materie diverse.</string>
    <string name="trophy_description_09">Completa 10 pomodori in un solo giorno.</string>
    <string name="trophy_description_10">Aggiungi una nuova materia.</string>
    <string name="trophy_description_11">Cancella una materia dopo aver passato l\'esame.</string>
    <string name="trophy_description_12">Prova la modalità di studio Pomodoro.</string>
    <string name="trophy_description_13">Riapri l\'app dopo 7 giorni dall\'ultimo accesso.</string>
    <string name="trophy_description_14">Visualizza i risultati delle tue sessioni.</string>
    <string name="trophy_description_15">Utilizza l\'app per un mese.</string>
    <string name="trophy_description_16">Completa 42 sessioni di qualunque tipo.</string>
    <string name="trophy_description_17">Studia in 5 luoghi diversi.</string>
    <string name="trophy_description_18">Completa una sessione normale da almeno un\'ora.</string>
    <string name="trophy_description_19">Completa una sessione normale da almeno due ore.</string>
    <string name="trophy_description_20">Sblocca tutti gli altri trofei..studiando!</string>

    <!-- Stringa sblocco trofei -->
    <string name="unlockTrophy">CONGRATULAZIONI! Hai sbloccato il trofeo: </string>

    <string name="gps_is_off">Il gps è disattivato, vuoi disattivarlo?</string>
    <string name="go_to_sett">Vai alle impostazioni</string>

    <!-- Stringhe delle impostazioni -->
    <string name="delete_location_label">Cancella luogo</string>
    <string name="delete_course_label">Cancella corso</string>
    <string name="delete_all_label">Cancella tutti i dati</string>
    <string name="pomodoro_mode_label">Usa modalità pomodoro</string>
    <string name="pomodoro_mode_expl">Modalità alternativa con sessioni fisse da 25 minuti</string>

    <!-- Stringhe eliminazione materie, corsi ed entrambi -->
    <string name="allDataDeleted">Tutti i dati sono stati eliminati</string>
    <string name="deleted">eliminato</string>

    <!-- Toast -->
    <string name="first_error_toast">Devi selezionare corso e tipo della sessione!</string>
    <string name="empty_insert_error_toast">Materia non inserita. E\' necessario specificare un nome!</string>
    <string name="back_confirm">Premi di nuovo indietro per uscire</string>

    <!-- Stringhe in ResultsActivity -->
    <string name="subjects_pie_chart_label">Le tue materie:</string>
    <string name="subjects_pie_chart_of_friend_label">Le materie di:</string>
    <string name="types_pie_chart_label">Tipo di studio:</string>
    <string name="most_frequent_location_label">Luogo più frequente:</string>
    <string name="most_frequent_location_default_value">Non specificato</string>
    <string name="total_time_label">Tempo totale:</string>
    <string name="minutes">minuti</string>
    <string name="advice_label">Conclusioni:</string>
    <string name="results_activity_edit_text_hint">Inserisci qui l\'username di un amico</string>

    <!-- Stringhe della mainActivity -->
    <string name="notification_title_label_custom">Timer Concluso! </string>
    <string name="notification_title_label_pomodoro">Pomodoro Concluso! </string>
    <string name="notification_text_label">Continui? </string>
    <string name="lazy_title_label">Vuoi mettere il timer a zero?</string>
    <string name="lazy_text_label">Almeno 5 minuti, dai!</string>
    <string name="confirm_exit_label">Non mostrare più</string>
    <string name="confirm_message">Sicuro di voler fermare il timer? Non passerai gli esami facendo così!</string>
    <string name="confirm_title">Attenzione!</string>
    <string name="go_on_negative">Interrompi</string>
    <string name="go_on_positive">Continua il timer</string>

    <!-- Stringhe che erano rimaste "volanti" -->
    <string name="none">Nessuno</string>
    <string name="callApiButtonText">Chiama il calendario di Google</string>
    <string name="retrieveInfoText">Premi il pulsante per ottenere le informazioni</string>
    <string name="callingApi">Sto avviando il servizio</string>
    <string name="noConnectionAvailable">Nessun servizio di rete disponibile</string>
    <string name="accessWarning">Questa applicazione necessita di accedere al tuo account Google (via Contatti)</string>
    <string name="needsWarning">Questa applicazione necessita di Google Play Services. Ti preghiamo di installare
        Google Play Services sul tuo dispositivo e riavviare l\'app</string>
    <string name="noResult">Nessun risultato ottenuto</string>
    <string name="messaggioInutile">Dati ottenuti usando il calendario di Goole:</string>
    <string name="apiError">Si è verificato un errore:</string>
    <string name="reqCancelled">Richiesta annullata</string>

    <string name="noSessionData">Devi selezionare corso e tipo della sessione!</string>
    <string name="endedTimer">Timer concluso!</string>
    <string name="noData">Nessun dato</string>
    <string name="courseDistribution">Distribuzione corsi</string>
    <string name="typeDistribution">Distribuzione tipi di sessione</string>

    <!-- Stringhe advices -->
    <string name="advice_2_0">Stai studiando con costanza. </string>
    <string name="advice_2_1">Dovresti studiare con maggiore frequenza. </string>
    <string name="advice_1_0">Sarebbe meglio studiare per più tempo al giorno. </string>
    <string name="advice_1_1">Rischi di affaticarti e stressarti se studi per troppo tempo al giorno. </string>
    <string name="advice_1_2">Stai studiando il corretto numero di ore al giorno. Continua così. </string>
    <string name="advice_0_0">Negli ultimi dieci giorni hai studiato poche materie diverse al giorno.</string>
    <string name="advice_0_1">Dovresti concentrarti su meno materie alla volta.</string>
    <string name="advice_0_2">Negli ultimi dieci giorni hai studiato il corretto numero di materie diverse al giorno.</string>

    <!-- Stringhe per il login e rete -->
    <string name="usrnameTaken">Questo username è già stato preso</string>
    <string name="unknownErr">Errore sconosciuto. Riprovare più tardi</string>
    <string name="noConnection">Non sei connesso a internet</string>
    <string name="loginFailed">Username o password sbagliati</string>
    <string name="unknownUser">Utente non trovato</string>
    <string name="syncUpLabel">Condividi risultati</string>
    <string name="alreadySynced">Dati già sincronizzati</string>
    <string name="noDataToGet">Nessun dato da ottenere dal server</string>
    <string name="search_label">Guarda i risultati di un amico</string>
    <string name="search_button">Cerca</string>
    <string name="syncDownLabel">Scarica i tuoi risultati</string>
    <string name="wait">Attendere...</string>
    <string name="syncComplete">Sincronizzazione completata</string>
    <string name="syncWarning">Tutti i dati non condivisi verranno persi</string>

    <!-- Stringhe intro -->
    <string name="title_intro_1">Studia e lavora meglio!</string>
    <string name="description_intro_1">Fissando tempi di studio e di pausa prima di iniziare potrai essere
    più efficiente e produttivo!</string>
    <string name="pomodoro_title">Pomodoro Technique</string>
    <string name="pomodoro_label">Inventata alla fine degli anni \'80, la Pomodoro Technique è una tecnica per la gestione del tempo
        che si basa sull\'utilizzo di timer da 25 minuti,
        separati da 5 minuti di pausa. Lo scopo è massimizzare il rendimento nello studio per un periodo prolungato.</string>
    <string name="title_intro_2">Pomodoro o custom?</string>
    <string name="description_intro_2"> Non ti piacciono i pomodori? Puoi scegliere te il tempo di lavoro che preferisci,
        nella modalità Personalizzata!</string>
    <string name="title_intro_3">Visualizza e condividi</string>
    <string name="description_intro_3">Controlla i tuoi risultati con grafici e statistiche,
        confrontali con quelli dei tuoi amici online!</string>

</resources>
