<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:color="@android:color/white" >

    <ListPreference
        android:id="@+id/delete_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="delete_location_preference"
        android:title="@string/delete_course_label" />

    <ListPreference
        android:id="@+id/delete_course_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="delete_course_preference"
        android:title="@string/delete_location_label" />

    <ListPreference
        android:id="@+id/delete_all_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="delete_all_preference"
        android:title="@string/delete_all_label" />

    <CheckBoxPreference
        android:id="@+id/checkPomodoro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="use_pomodoro_mode"
        android:title="@string/pomodoro_mode_label"
        android:summary="@string/pomodoro_mode_expl"
        android:defaultValue="true" />

</PreferenceScreen>