<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <ImageView
                    android:id="@+id/t1"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_01" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_01"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_01"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t2"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_02" />

                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_02"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_02"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t3"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_03" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_03"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_03"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t4"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_04" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_04"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_04"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t5"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_05" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_05"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_05"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t6"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_06" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_06"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_06"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t7"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_07" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_07"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_07"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t8"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_08" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_08"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_08"/>
                </LinearLayout>

            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t9"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_09" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_09"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_09"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t10"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_10" />
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_10"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_10"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t11"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_11"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_11"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_11"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t12"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_12"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_12"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_12"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t13"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_13"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_13"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_13"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t14"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_14"/>

                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_14"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_14"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t15"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_15"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_15"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_15"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t16"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_16"/>
                <LinearLayout
                    android:orientation="vertical"
                    tools:ignore="TooManyViews">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_16"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t17"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_17"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_17"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_17"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t18"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_18"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_18"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_18"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t19"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_19"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_19"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_19"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/t20"
                    style="@style/TrophyImage"
                    android:contentDescription="@string/trophy_title_20"/>
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyTitle"
                        android:text="@string/trophy_title_20"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TrophyDescription"
                        android:text="@string/trophy_description_20"/>
                </LinearLayout>
            </TableRow>

        </TableLayout>

</ScrollView>