<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.alessio.tesi.MainActivity">
    <item
        android:id="@+id/menu_results"
        android:orderInCategory="100"
        android:title="@string/menu_results"
        android:icon="@drawable/graphic_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_trophies"
        android:orderInCategory="100"
        android:title="@string/menu_trophies"
        android:icon="@drawable/trophies_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
</menu>
