<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/newLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/login_textview_label"
        android:inputType="text" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/newLog"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/password_textview_label"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/LoginLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPass"
        android:layout_alignStart="@+id/newPass"
        android:layout_below="@+id/newPass"
        android:orientation="horizontal"
        android:layout_alignRight="@+id/newPass"
        android:layout_alignEnd="@+id/newPass">

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Borderless"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/login_access_label" />

        <Button
            android:id="@+id/registrationButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/login_registration_label" />
    </LinearLayout>


</RelativeLayout>